--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,5 @@
 import DoubleLinkedImages from "../components/double_linked_images"
+import LinkedImage from "../components/linkedimage"
 
 # About Three Amigos Modding
 Welcome to Three Amigos Modding! We are a collective of three creators who joined forces in the Fall of 2023 with the mission of providing fresh and quality content for the FiveM world!  We thrive on new ideas and are ready to help improve your game experience! Built by roleplayers, for roleplayers.
@@ -14,6 +15,11 @@ Welcome to Three Amigos Modding! We are a collective of three creators who joine
     alt2="Three Amigos Modding Discord Server"
 />
 
+<LinkedImage
+    href="https://discord.gg/perimeter"
+    src="static/perimeter.png"
+    alt="Perimeter Gaming"
+/>
 ## Getting Started
 Here you can easily find all of the information you'll need for any resources made by Three Amigos Modding. This includes how to install and configure the resources, any developer functions/events they may have. Many helpful tips & tricks for development and more! 
 
