--- a/pages/tips/editor.mdx
+++ b/pages/tips/editor.mdx
@@ -10,7 +10,7 @@ Visual Studio Code (or VSCode) is probably the best code editor i've ever used, 
 [Download Visual Studio Code](https://code.visualstudio.com/)
 
 ### VS Code extensions
-Here are some very popular and extremely helpful extensions we recommend using.
+Here are some very popular and extremely helpful extensions we recommend using. Please be sure to configure them to your specific needs.
 
 [LUA by sumneko](https://marketplace.visualstudio.com/items?itemName=sumneko.lua)
 
