--- a/pages/tips/ftp.mdx
+++ b/pages/tips/ftp.mdx
@@ -1,1 +1,15 @@
 # FTP/SSH 
+
+Using FTP/SSH is significantly easier and faster then attempting to edit stuff right off of a VPS, esspecially when in production. Additional services like VS Code, a browser etc running on the VPS will degrade performance and may cause lag in game. There's dozens of tutorials on how to setup FileZilla server or another FTP server on a windows VPS. If you're on linux, OpenSSH includes one, just using the same information you would use to SSH.
+
+## FTP/SSH Programs
+
+[Filezilla](https://filezilla-project.org)
+
+[WinSCP](https://winscp.net)
+
+[Termius](https://termius.com)
+
+[MobaXTerm](https://mobaxterm.mobatek.net)
+
+[Terminal](https://apps.microsoft.com/detail/windows-terminal/9N0DX20HK701?hl=en-us&gl=US)
