--- a/pages/resources/firesigns.mdx
+++ b/pages/resources/firesigns.mdx
@@ -2,19 +2,19 @@
 title: Firesigns
 ---
 
-# Chat Toolbox
+# Fire Signs
 
-Easily and quickly create as many commands as you'll ever need with this modular toolbox at your disposal! Offering many commands out of the box with support for all of the major frameworks (and standalone!) out of the box.
+Warn the citizens of San Andreas with our fully customizable fire danger warning signs which can be easily set up across the map, and allow for on the spot changing of danger levels. Fully configurable, fully customizable, fully built for your RP needs. 
 
 
 ## Installation
 1. Download or update `ox_lib`. Make sure to download the [release](https://github.com/overextended/ox_lib/releases/latest)
-2. Download `TAM_ChatToolBox` from [Github](https://github.com/ThreeAmigosModding/TAM_chattoolbox) or [Keymaster](https://keymaster.fivem.net)
+2. Download `TAM_FireSigns` from [Keymaster](https://keymaster.fivem.net)
 3. Drag and drop **both** `ox_lib` and `TAM_ChatToolBox` into your resources folder.
-4. Add `ox_lib` and `TAM_ChatToolBox` to your server or resources.cfg. Always be sure that `ox_lib` is starting first
+4. Add `ox_lib` and `TAM_FireSigns` to your server or resources.cfg. Always be sure that `ox_lib` is starting first
 ```cfg
 ensure ox_lib
-ensure TAM_changelog
+ensure TAM_FireSigns
 ```
 5. Done! You're ready to configure it.
 
