--- a/pages/resources/changelog.mdx
+++ b/pages/resources/changelog.mdx
@@ -1,3 +1,7 @@
+---
+title: Changelog
+---
+
 # Changelog
 
 Easily inform your players of server changelogs or announcements each time they join your server. Can be configured to display any message you like.
