--- a/pages/tips/lua.mdx
+++ b/pages/tips/lua.mdx
@@ -164,3 +164,6 @@ function setNotHurt()
     ResetPedStrafeClipset(PlayerPedId())
 end
 ```
+
+
+Snippets are from the [Overextended](https://discord.gg/overextended) Discord, credits to respective people.
