--- a/pages/resources/police.mdx
+++ b/pages/resources/police.mdx
@@ -1,5 +1,5 @@
 
-# [Complete Police System](https://fivem.threeamigos.shop)
+# [Complete Police System](https://fivem.threeamigos.shop/package/6725028)
 TAM_Police is one of the most advanced and in-depth police systems made for FiveM yet! Fully made in collaboration with industry professionals, it was built to be as realistic as possible, without being a burden, to give your players an experience they can never forget.
 
 ## Full Feature List
