--- a/pages/resources/fuel.mdx
+++ b/pages/resources/fuel.mdx
@@ -8,7 +8,7 @@ TAM_Fuel is the most advanced fuel system developed for FiveM yet. Integrating s
 - Compatible with QBCore, QBox, ESX, NDCore and standalone (or adapt your own!)
 - Multiple Fuel Types (Gasoline, Diesel, AVGAS/JetFuel & Electric). We have plans to add more in the future!
 - Configurable pricing and refuel rate per fuel type.
-- 3rd-eye interaction system (ox_target or qb_target).
+- 3rd-eye interaction system (ox_target).
 - Multiple progress bar styles (circle & bar from ox_lib or your own).
 - Full jerrycan support (Buying, refueling vehicles & refilling).
 - Custom nozzle props based on the fuel type used.
