--- a/pages/resources/police/configuration.mdx
+++ b/pages/resources/police/configuration.mdx
@@ -19,9 +19,11 @@ config.enableVersionCheck = true -- Should we check for updates on startup.
 
 config.debug = true -- Enables various debug commands.
 
+config.logger = true -- Enable or disable lib.logger support. 
+
 config.useInventory = true -- This is required for most evidence to work & for any of the item checks to function.
 
-config.checkDuty = false -- Require that a player is onDuty before allowing them to interact.
+config.checkDuty = true -- Require that a player is onDuty before allowing them to interact.
 
 config.groups = { -- Groups & grades
     -- groupName = groupGrade
@@ -71,6 +73,7 @@ config.jailing = {
 
 config.alertPeds = {
     enabled = true, -- Enables or disables the "Alert Police" peds that can spawn at stations.
+    cooldown = 60, -- Time in seconds before someone can alert police again.
     target = { -- Target is the only way to interact with these, we plan on adding more ways to in the future.
         icon = 'fa-solid fa-bell', -- Font awesome icon.
         distance = 3 -- Interact Distance
@@ -81,13 +84,18 @@ config.interactions = {
     enabled = true, -- Enable the various interactions
     cuffs = {
         enabled = true, -- Enable cuff system
-        requireDuty = false, -- Should players need to be on duty to cuff someone.
+        enableExports = true, -- Enable or disable exports - This is ignored if Config.useInventory is set to true.
+        requireDuty = { -- Require duty for specific tasks.
+            cuff = true,
+            uncuff = false,
+            ziptie = false,
+            unziptie = false,
+        },
         requireHandsUp = false, -- Should players be required to have their hands up in order be cuffed ?
-        zipTies = true, -- Enable zip ties
-        cuffItem = false, -- Item required to cuff players. Set to false for no restriction. ie "handcuffs"
-        unCuffItem = false, -- Item required to un-cuff players. Set to false for no restriction. ie "handcuffkeys"
-        zipTieItem = false, -- Item required to zip-tie players. ie "zipties"
-        unZipItem = false, -- Item(s) require to un-zip-tie players. ie "wirecutters" | {"cutters", "wirecutters"}
+        cuffItem = "handcuffs", -- Item required to cuff players. Set to false for no restriction. ie "handcuffs"
+        unCuffItem = "handcuffkeys", -- Item required to un-cuff players. Set to false for no restriction. ie "handcuffkeys"
+        zipTieItem = "zipties", -- Item required to zip-tie players. ie "zipties"
+        unZipItem = {"cutters", "wirecutters"}, -- Item(s) require to un-zip-tie players. ie "wirecutters" | {"cutters", "wirecutters"}
         target = {
             enabled = true, -- Enable target to cuff / ziptie / uncuff players
             icon = "fas fa-handcuffs", -- Font awesome icon
@@ -99,10 +107,10 @@ config.interactions = {
         },
     },
     escorting = {
-        enabled = true, -- Enable the escortsystem .
-        requireDuty = false, -- Should players need to be on duty to escort someone.
-        requiredCuffed = false, -- Should players be required to be cuffed in order to be escorted?
-        allowExit = false, -- Should players be able to exit the back seat on their own or do they need to be pulled out?
+        enabled = true, -- Enable the escort system.
+        requireCuffed = true, -- Should players be required to be cuffed in order to be escorted? This will still play the cuffed animation if disabled due to limitations.
+        allowDead = false, -- Should players be able to escort a dead player? This will still play the cuffed animation due to limitations.
+        requireDuty = true, -- Should players need to be on duty to escort another player?
         target = {
             enabled = true, -- Enable target to escort / seat into vehicles
             icon = "fas fa-hands-bound", -- Font awesome icon
@@ -112,13 +120,20 @@ config.interactions = {
         command = {
             enabled = true, -- Enable command to escort / seat into vehicles
             distance = 2.0 -- Distance to check for nearby players.
+        },
+        keybind = {
+            enabled = true, -- Enable the keybind to toggle escorting a player.
+            defaultKey = "G", -- The default key to toggle escorting a nearby player.
+            defaultMapper = "KEYBOARD", -- default key mapper to toggle escorting a nearby player, ie controller keybind.
+            secondaryKey = nil, -- Secondary key to toggle escorting a nearby player, ie controller keybind.
+            secondaryMapper = nil -- Secondary key mapper to toggle escorting a nearby player, ie controller keybind.
         }
     },
     searching = {
         enabled = true, -- Enable the ability to search other players.
-        requireHandsUp = false, -- Require a player to have their hands up to search.
         requireCuffed = true, -- Should a player need to be cuffed to be searched
-        requireDuty = false, -- Should players need to be on duty to search someone.
+        allowDead = false, -- Should players be able to search other players while dead.
+        requireDuty = true, -- Should players need to be on duty to search another player.
         target = {
             enabled = true, -- Enable target to search players
             icon = "fas fa-magnifying-glass", -- Font awesome icon
@@ -181,6 +196,7 @@ config.cloakRooms = {
     keybind = { 
         enabled = true, -- Enable / disable the keybind interaction method.
         key = 38, -- Interaction key. Default is E
+        radius = 5 -- The radius around the point to check for keybind press.
     },
     target = {
         enabled = false, -- Enable the target interaction.
@@ -193,9 +209,15 @@ config.cloakRooms = {
 config.garages = {
     enabled = true, -- Should we enable the garage system?
     teleport = true, -- Should we teleport the player into the car?
+    returnEnabled = true, -- Should we allow players to return their vehicles.
     target = { -- The target interaction method. This is currently the only way to interact with the garages, we will be adding support for other methods in the future.
+        enabled = true, -- Enable or disable the peds to interact with via target.
         icon = "fas fa-warehouse", -- Font awesome icon
         distance = 2 -- Interact distance
+    },
+    keybind = { -- Garage keybind. Players will return vehicles via this keybind
+        key = 38, -- Interaction key. Default is E
+        radius = 5 -- Radius around the point.
     }
 }
 
@@ -775,27 +797,27 @@ shotSpotterConfig.enabled = true -- Enable the shot spotter module
 
 shotSpotterConfig.debug = false -- Should we display zones on the map.
 
-shotSpotterConfig.cooldown = 10 -- Time in minutes until the shot spotter can be triggered again.
+shotSpotterConfig.cooldown = 5 -- Time in minutes until the shot spotter can be triggered again.
 
-shotSpotterConfig.alertDelay = 30 -- Time in seconds until the shot spotter sends the alert
+shotSpotterConfig.alertDelay = 10 -- Time in seconds until the shot spotter sends the alert
 
 shotSpotterConfig.radius = 500 -- Radius around each shot spotter.
 
-shotSpotterConfig.jobCheck = false -- check for jobs to ignore.
+shotSpotterConfig.jobCheck = false -- Should we check for jobs.
 
 shotSpotterConfig.ignoredJobs = { -- Jobs to ignore.
-    "lspd", "sahp"
+    "police"
 }
 
-shotSpotterConfig.blips = { -- Blips on each shot spotter
-    enabled = true, -- Enable or disable
-    sprite = 313, -- Sprite
-    color = 1, -- Color
-    scale = 0.5, -- Scale
-    label = locale("blip.shotspotter.blip_label"), -- Blip label.
+shotSpotterConfig.blips = {
+    enabled = true,
+    sprite = 313,
+    color = 1,
+    scale = 0.8,
+    label = "Shotspotter",
 }
 
-shotSpotterConfig.locations = { -- Shotspotter locations
+shotSpotterConfig.locations = {
     vec3(653.42, -648.74, 57.18), -- Los Santos Fwy
     vec3(1015.98, -255.25, 85.58), -- Glory Way
     vec3(329.99, 288.96, 120.10), -- Clinton Ave
@@ -828,7 +850,7 @@ shotSpotterConfig.locations = { -- Shotspotter locations
     -- vec3(375.02, 2778.28, 55.97) -- Route 68 / Joshua
 }
 
-shotSpotterConfig.ignoredWeps = { -- Weapons that are ignored. Please note the usage of backticks (`) instead of (") or (')
+shotSpotterConfig.ignoredWeps = {
     `weapon_raypistol`,
     `weapon_stungun_mp`,
     `weapon_flaregun`,
@@ -878,7 +900,7 @@ shotSpotterConfig.ignoredWeps = { -- Weapons that are ignored. Please note the u
     `weapon_candycane`
 }
 
-shotSpotterConfig.suppressors = { -- Possible supressors to check for.
+shotSpotterConfig.suppressors = {
     `COMPONENT_AT_PI_SUPP_02`, -- Pistol, Pistol Mk2, SNS Pistol Mk2.
     `COMPONENT_AT_PI_SUPP`, -- Combat Pistol, AP Pistol, Heavy Pistol, Vintage Pistol, SMG, SMG Mk2, Machine Pistol.
     `COMPONENT_AT_AR_SUPP_02`, -- .50 Pistol, Micro SMG, Assault SMG, Bullpup Shotgun, Heavy Shotgun, Assault Rifle, Special Carbine, Special Carbine Mk2, Assault Rifle Mk2, Sniper Rifle.
@@ -1119,6 +1141,61 @@ return {
         },
     }
 }
+```
+
+## Garage Configuration
+
+The garage configuration file can be found in `data/data_garages.lua` and includes all of the garages & their vehicles.
+
+You can copy your current vehicles information to your clipboard to paste it in this file via the command `/getvehprops`
+
+```lua
+    {
+        coords = vec3(-485.026, 5982.255, 31.423), -- Coords for the zone,
+        distance = 50, -- Zone load distance,
+        ped = { -- Ped configuration
+            model = `S_M_Y_XMech_01`, -- Ped model
+            scenario = "WORLD_HUMAN_CLIPBOARD", -- Ped scenario
+            coords = vec3(-485.026, 5982.255, 31.423), -- Ped coords
+            heading = 280.14, -- Ped heading
+            -- anim = { -- You can also specify an animation instead of scenario.
+            --     clip = "animation_clip",
+            --     dict = "animation_dict"
+            -- }
+        },
+        returnConfig = { -- Return position
+            coords = vec3(-466.614, 5971.854, 31.423), -- Return coords
+            radius = 4 -- Radius around the coords.
+        },
+        blip = { -- Blip
+            enabled = false,
+            sprite = 357,
+            color = 3,
+            scale = 0.8,
+            label = "Vehicle Garage",
+            onlyNearby = false,
+        },
+        garages = { -- Garages available at this location
+            {
+                name = 'Patrol Fleet', -- Garage name
+                id = "paleto_patrol", -- Unique ID for the garage.
+                optionLabel = "View Patrol Fleet", -- Garage option label
+                optionDescription = 'View the Patrol vehicle fleet!', -- Garage option description
+                vehicles = { -- Vehicles available at this garage
+                    {
+                        name = "Vehicle Name",
+                        model = `spawncode`,
+                        spawnCoords = vec3(-482.089569, 5983.217285, 31.123310), -- Coords to spawn the vehicle at,
+                        heading = 225, -- Heading for the vehicle.
+                        groups = { -- group & minimum grade required to have this vehicle.
+                            police = 4
+                        },
+                        vehProps = {...} -- Vehicle Props
+                    }
+                }
+            }
+        }
+    },
 ```
 
 ## Bridge & Integration Configuration
